# app/Http/Controllers/EventController.php
@@ -4,10 +4,12 @@ namespace App\Http\Controllers;
 
 use App\Enum\Category;
 use App\Enum\Language;
+use App\Http\Requests\EventsThatHappenedOnRequest;
 use App\Http\Resources\EventResource;
 use App\Repository\EventRepository;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
+use Illuminate\Validation\Rules\Enum;
 use Knuckles\Scribe\Attributes\Endpoint;
 use Knuckles\Scribe\Attributes\QueryParam;
 use Knuckles\Scribe\Attributes\UrlParam;
@@ -15,26 +17,35 @@ use Knuckles\Scribe\Attributes\UrlParam;
 class EventController extends Controller
 {
 
-    #[Endpoint("Fetch events that happened on a specific day")]
-    #[UrlParam(name: 'month', description: 'The month of the event', example: 12)]
-    #[UrlParam(name: 'day', description: 'The day of the event', example: 31)]
+    #[Endpoint(
+        "Fetch events that happened on a specific day",
+        <<<ENDPOINT
+Fetch events that happened on a specific day
+This endpoint fetches events that happened on a specific day.
+ENDPOINT
+    )]
+    #[UrlParam(name: 'month', type: 'integer', description: 'The month of the events', example: 12)]
+    #[UrlParam(name: 'day', type: 'integer', description: 'The day of the events', example: 31)]
     #[QueryParam(name: 'limit', type: 'integer', description: 'The limit of the events', required: false, example: 10)]
     #[QueryParam(name: 'category', description: 'The category of the event', required: false, example: 'births', enum: Category::class)]
     #[QueryParam(name: 'language', description: 'The language of the event', required: false, example: 'en', enum: Language::class)]
     public function that_happened_on(
-        Request $request,
+        EventsThatHappenedOnRequest $request,
         EventRepository $eventRepository,
-        string $month,
-        string $day
+        int $month,
+        int $day
     ): AnonymousResourceCollection
     {
+
+        $request->validated();
+
         return EventResource::collection(
             $eventRepository->fetchEvents(
-                (int) $month,
-                (int) $day,
-                Language::tryFrom($request->query('language', 'en')) ?? Language::English,
-                Category::tryFrom($request->query('category', 'selected')) ?? Category::Regular,
-                (int) $request->query('limit', 10),
+                $month,
+                $day,
+                Language::tryFrom($request->validated('language', 'en')) ?? Language::English,
+                Category::tryFrom($request->validated('category', 'selected')) ?? Category::Regular,
+                (int) $request->validated('limit', 10),
             )
         );
     }
